--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.glass {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.4px);
+  -webkit-backdrop-filter: blur(5.4px);
+}
+
+.gradient {
+  background-image: linear-gradient(
+    -120.6deg,
+    rgba(156, 252, 248, 1) 11.2%,
+    rgba(110, 123, 251, 1) 91.1%
+  );
+}
+.gradient2 {
+  background-image: linear-gradient(to right, #ff512f, #f09819);
+}
+
+.gradient3 {
+  background-image: linear-gradient(to right, #ff9966, #ff5e62);
+}
+
+.gradient4 {
+  background-image: linear-gradient(to right, #2c3e50, #4ca1af);
+}
